# aiogram_tg_bot_template

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml  secrets.toml.example  settings.toml
bot/: __init__.py  __main__.py  config.py
bot/cache/: __init__.py  base.py  cache.py  models.py  wrapper.py
bot/core/: dto.py  enums.py  protocols.py
bot/core/middlewares/: __init__.py  database.py  dialog_reset.py  i18n.py  inject.py  logger.py  register.py
bot/core/providers/: __init__.py  cache.py  cache_provider.py  common.py  common_provider.py  interactor.py  protocols.py  repository.py
bot/handling/: schema.py
bot/handling/dialogs/: __init__.py
bot/handling/handlers/: __init__.py  start.py
bot/handling/states/: main_menu.py
bot/handling/utils/: button_checker.py
bot/infrastructure/: dishka_container.py
bot/interactors/: base.py
bot/interactors/user/: __init__.py  crud.py
bot/nats_storage/: __init__.py  entry.py
bot/repository/: __init__.py
bot/repository/impl/: __init__.py  user.py
bot/repository/interfaces/: base.py  sqlalchemy_repository.py  sqlalchemy_repository.pyi
config/: __init__.py  config.py  models.py
database/config/: __init__.py  base.py  common.py
database/config/orm/: __init__.py  engine.py  mixin.py  session.py
database/migrations/: env.py
database/models/: __init__.py  mixins.py  users.py
i18n/: factory.py  i18n_stub_script.sh  stub.pyi
logs/: __init__.py  config.py  startup.py
nats/: Dockerfile  migrations.py  pyproject.toml
(+7 files in other folders)
